Automate disabling pre-KitKat's Dalvik bytecode verifier